--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="/">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     
     <span class="navbar-toggler-icon"></span>
@@ -18,18 +18,22 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Produits</a>
+        <a class="nav-link" href="/produit">Produits</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Création d'un Produit</a>
+        <a class="nav-link" href="/produit/nouvelle">Création d'un Produit</a>
       </li>
     </ul>
   </div>
 </nav>
-    {% block body %}{% endblock %}
+    <dir class="container">
+        {% block body %}{% endblock %}
+    </dir>
+    
+
     {% block javascripts %} {% endblock %}
 </body>
 
