--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
-    {% block stylesheets %}{% endblock %}
-</head>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css"> {% block stylesheets %}{% endblock %}
+		</head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="/">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-    
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarColor01">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/produit">Produits</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/produit/nouvelle">Création d'un Produit</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-    <dir class="container">
-        {% block body %}{% endblock %}
-    </dir>
-    
+		<body>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+				<a class="navbar-brand" href="{{path('home')}}">Navbar</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 
-    {% block javascripts %} {% endblock %}
-</body>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarColor01">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="{{path('home')}}">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('produit')}}">Produits</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('create')}}">Création d'un Produit</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<dir class="container"> {% block body %}{% endblock %}
+				</dir>
 
-</html>
+
+				{% block javascripts %}{% endblock %}
+			</body>
+
+		</html>
