--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,12 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css"> {% block stylesheets %}{% endblock %}
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+		<link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+		<link rel="stylesheet" href="{{asset('asset/css/style.css')}}"> {% block stylesheets %}{% endblock %}
 		</head>
 
 		<body>
@@ -26,7 +31,7 @@
 							<a class="nav-link" href="{{path('produit')}}">Produits</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{path('create')}}">Création d'un Produit</a>
+							<a class="nav-link" href="{{path('createForm')}}">Création d'un Produit</a>
 						</li>
 					</ul>
 				</div>
