--- a/templates/produit/affiche.html.twig
+++ b/templates/produit/affiche.html.twig
@@ -7,7 +7,7 @@
 	<div class="produit">
 		<h1>{{produit.nom}}</h1>
 		<h4>{{produit.dateDeCreation|date("m/d/Y")}}</h4>
-		<img src="{{produit.image}}" alt="">
+		<img src="{{asset('asset/image/pokemonPink.jpg')}}" alt="">
 		<h4>
 			Description du produit :
 			{{produit.description}}
@@ -17,4 +17,50 @@
 			{{produit.prix}}
 		</h4>
 	</div>
-{% endblock body %}
+</div>
+<!-- Slideshow container -->
+<div
+	class="slideshow-container">
+
+	<!-- Full-width images with number and caption text -->
+	<div class="mySlides fade">
+		<div class="numbertext">1 / 5</div>
+		<img src="{{asset('asset/image/mtg (1).jpg')}}" style="width:100%">
+		<div class="text">Caption Text</div>
+	</div>
+
+	<div class="mySlides fade">
+		<div class="numbertext">2 / 5</div>
+		<img src="{{asset('asset/image/mtg (2).jpg')}}" style="width:100%">
+		<div class="text">Caption Two</div>
+	</div>
+
+	<div class="mySlides fade">
+		<div class="numbertext">3 / 5</div>
+		<img src="{{asset('asset/image/mtg (3).jpg')}}" style="width:100%">
+		<div class="text">Caption Three</div>
+	</div>
+
+	<div class="mySlides fade">
+		<div class="numbertext">4 / 5</div>
+		<img src="{{asset('asset/image/mtg (4).jpg')}}" style="width:100%">
+		<div class="text">Caption Four</div>
+	</div>
+
+	<div class="mySlides fade">
+		<div class="numbertext">5 / 5</div>
+		<img src="{{asset('asset/image/mtg (5).jpg')}}" style="width:100%">
+		<div class="text">Caption Five</div>
+	</div>
+	<!-- Next and previous buttons -->
+	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+	<span class="dot" onclick="currentSlide(1)"></span>
+	<span class="dot" onclick="currentSlide(2)"></span>
+	<span class="dot" onclick="currentSlide(3)"></span>
+</div>{% endblock body %}
