--- a/templates/produit/create.html.twig
+++ b/templates/produit/create.html.twig
@@ -1,17 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create{% endblock %}
-
-{% block body %}
-<div>
-    <h1>Création d'une route</h1>
-</div>
+{% block title %}Create
 {% endblock %}
 
+{% block body %}
+	<div>
+		<h1>Création d'un Produit</h1>
+	</div>
+	{{ form_start (formulaire)}}
+	{{ form_widget (formulaire)}}
+	<button type="submit" class="btn btn warning">Ajouter un produit</button>
+	{{ form_end (formulaire)}}
 
 
-
-
-
-
-
+{% endblock %}
