--- a/templates/produit/nouvelle.html.twig
+++ b/templates/produit/nouvelle.html.twig
@@ -1,21 +1,20 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Create{% endblock %}
+{% block title %}Create
+{% endblock %}
 
 {% block body %}
-<div>
-    <h1>Mon prenom est {{monprenom}}.</h1>
-    <h2>Mon age est {{monage}} ans.</h2>
-    {% if monage > 17 %}
-        <h2>Vous êtes majeur.</h2>
-    {% else %}
-        <h2>Vous êtes mineur.</h2>
-    {% endif %}
+	<div>
+		<h1>Mon prenom est
+			{{monprenom}}.</h1>
+		<h2>Mon age est
+			{{monage}}
+			ans.</h2>
+		{% if monage > 17 %}
+			<h2>Vous êtes majeur.</h2>
+		{% else %}
+			<h2>Vous êtes mineur.</h2>
+		{% endif %}
 
 
-</div>
-
-
-
-
-{% endblock body %}
+	{% endblock body %}
